# django-kafka

./: .bumpversion.toml  .gitignore  .ruff.toml  .sync.yml  CHANGELOG.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  README.md  admin.py  compose.yaml  pyproject.toml  requirements-ci.txt  requirements-test.txt  system_dependencies.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-and-publish.yaml  check_pull_request.yaml  cron.yaml  lint.yaml  open-release-pr.yaml  tag-release.yaml  workflow.yaml
django_kafka/: __init__.py  admin.py  apps.py  conf.py  consumer.py  error_handlers.py  exceptions.py  models.py  producer.py  registry.py  serialization.py  topic.py  utils.py
django_kafka/connect/: client.py  connector.py  models.py
django_kafka/consumer/: __init__.py  consumer.py  managers.py  runner.py  topics.py
django_kafka/dead_letter/: header.py  headers.py  topic.py
django_kafka/locale/de/LC_MESSAGES/: django.po
django_kafka/management/commands/: errors.py  kafka_connect.py  kafka_consume.py
django_kafka/migrations/: 0001_initial.py  0002_relationresolvercachemodel.py  0002_waitingmessage.py  0003_alter_waitingmessage__headers.py  0004_waitingmessage_django_kafka_topic_key_idx.py  0005_waitingmessage_django_kafka_relation_idx.py
django_kafka/models/: __init__.py
django_kafka/models/model_sync/: __init__.py  descriptor.py  enricher.py  fields.py  registry.py  sync.py  transforms.py
django_kafka/models/model_sync/sink/: __init__.py  base.py  dbz_jdbc.py
django_kafka/models/model_sync/source/: __init__.py  base.py  dbz_postgres.py
django_kafka/relations_resolver/: __init__.py  relation.py  resolver.py
django_kafka/relations_resolver/cache/: base.py  model.py  redis.py
django_kafka/relations_resolver/daemon/: __init__.py  temporal.py
django_kafka/relations_resolver/processor/: __init__.py  base.py  model.py
django_kafka/relations_resolver/temporal/: message.py  relation.py  resolver.py
django_kafka/relations_resolver/temporalio/: activities.py  schedules.py  workflows.py
django_kafka/retry/: __init__.py  consumer.py  header.py  settings.py  topic.py  tracker.py
django_kafka/schema/: avro.py  fields.py
django_kafka/temporalio/: activities.py  workflows.py
django_kafka/tests/: models.py  test_consumer.py  test_django_kafka_interface.py  test_header.py  test_models.py  test_producers.py  test_registry.py  test_settings.py  test_topic.py  utils.py
django_kafka/tests/connect/: test_client.py  test_connector.py  test_kafka_connect_command.py  test_substitute_error.py
django_kafka/tests/dead_letter/: test_topic.py
django_kafka/tests/relations_resolver/: factories.py  test_model_processor.py  test_model_relation.py  test_queryset.py  test_relation.py  test_relation_type.py  test_resolver.py
django_kafka/tests/retry/: test_consumer.py  test_headers.py  test_retry.py  test_topic.py
django_kafka/tests/test_connect/: test_client.py  test_connector.py  test_kafka_connect_command.py  test_models.py
django_kafka/tests/test_consumer/: test_consumer.py  test_managers.py  test_topics.py
django_kafka/tests/test_dead_letter/: test_topic.py
django_kafka/tests/test_models/test_model_sync/: factories.py  test_consumer_integration.py  test_sink.py  (+6 more)
django_kafka/tests/test_retry/: test_consumer.py  test_headers.py  test_key_offset_tracker.py  test_retry.py  test_topic.py
django_kafka/tests/test_schema/: test_avro.py
django_kafka/tests/test_topic/: test_avro.py  test_debezium.py  test_model.py  test_reproducer.py  test_topic.py  test_transforms.py
django_kafka/tests/test_utils/: test_message.py
django_kafka/tests/topic/: test_debezium.py  test_model.py  test_topic.py
django_kafka/topic/: __init__.py  avro.py  debezium.py  model.py  reproducer.py  transforms.py
django_kafka/utils/: __init__.py  message.py  retry.py
example/: manage.py  models.py  requirements-ci.txt  requirements.txt  settings.py
example/conf/: asgi.py  settings.py  wsgi.py
example/migrations/: 0001_initial.py
(+3 files in other folders)
