[project]
name = "django-kafka"
version = "0.6.0"
license = "MIT"
requires-python = ">=3.11"
description = "Confluent's Kafka Python Client combined with Django"
readme = "README.md"
keywords = ["django", "kafka"]
authors = [{ name = "RegioHelden GmbH", email = "opensource@regiohelden.de" }]
maintainers = [
    { name = "RegioHelden GmbH", email = "opensource@regiohelden.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django>=4.2,<6.0",
    "confluent-kafka[avro, schemaregistry]>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/RegioHelden/django-kafka"
Documentation = "https://github.com/RegioHelden/django-kafka/blob/master/README.md"
Repository = "https://github.com/RegioHelden/django-kafka.git"
Issues = "https://github.com/RegioHelden/django-kafka/issues"
Changelog = "https://github.com/RegioHelden/django-kafka/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_scrubber"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
packages = ["django_scrubber"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.ruff]
exclude = [
    ".cache",
    ".git",
    "__pycache",
    "docs",
    "migrations",
    "rh_django_shared",
    "src",
]
line-length = 88

[tool.ruff.lint]
dummy-variable-rgx = "_|dummy"
# See https://docs.astral.sh/ruff/rules/ for all supported rules
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "ERA", # eradicate
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["*site-packages*", "*tests*", "*.tox*"]
show_missing = true
exclude_lines = ["raise NotImplementedError"]
